prevent page elements width overflow

--- a/assets/src/scss/components/content.scss
+++ b/assets/src/scss/components/content.scss
@@ -64,6 +64,7 @@ body.single {
   
   
   & + #content {
+    overflow-x: hidden;
     padding-top: $size__padding * .75;
     
     @media #{$mq__smaller-than-tablet} {
